# gw2formats

./: .gitignore  CMakeLists.txt  README.md  TODO.md  libgw2formatsConfig.cmake.in
examples/: CMakeLists.txt
examples/prj/: EnumStrings.cbp  EnumStrings.vcxproj  EnumStrings.vcxproj.filters  EulaSample.cbp  EulaSample.vcxproj  EulaSample.vcxproj.filters  TextureDump.cbp  TextureDump.vcxproj  TextureDump.vcxproj.filters  bxml2-test.cbp  bxml2-test.filters  bxml2-test.vcxproj
examples/src/: bxml2-test.cpp  enumerate-strings.cpp  eula.cpp  texture-dump.cpp
include/gw2formats/: Language.h  StringsFile.h  TextureFile.h  base.h  fcc.h
include/gw2formats/bxml2/: Bxml2Reader.h  XmlAttribute.h  XmlDocument.h  XmlElement.h  XmlWriter.h
include/gw2formats/exception/: Exception.h
include/gw2formats/pf/: AnimSequencesPackFile.h  AudioPackFile.h  BankIndexPackFile.h  BankPackFile.h  ChunkFactory.h  CollideModelManifestPackFile.h  CompositePackFile.h  ContentManifestPackFile.h  EmoteAnimPackFile.h  EulaPackFile.h  HavokPackFile.h  MapMetadataPackFile.h  MapPackFile.h  MapShadowPackFile.h  MaterialPackFile.h  ModelPackFile.h  PackFile.h  PagedImagePackFile.h  PortalManifestPackFile.h  ScenePackFile.h  ScriptPackFile.h  TextManifestPackFile.h  TextPackPasswordsFile.h  TextVariantPackFile.h  TextVoicePackFile.h
include/gw2formats/pf/chunks/ABIX/: BankIndexData.h
include/gw2formats/pf/chunks/ABNK/: BankFileData.h
include/gw2formats/pf/chunks/AMAT/: AmatDx9Material.h  AmatGfxMaterial.h  AmatGr.h  AmatToolParams.h
include/gw2formats/pf/chunks/AMSP/: ScriptFileData.h
include/gw2formats/pf/chunks/ASND/: WaveformData.h
include/gw2formats/pf/chunks/CINP/: SceneData.h
include/gw2formats/pf/chunks/MODL/: ModelFileAnimation.h  ModelFileCollision.h  ModelFileData.h  ModelFileGeometry.h  ModelFileProperties.h  ModelFileRootMotion.h  ModelFileSkeleton.h  common.h
include/gw2formats/pf/chunks/PIMG/: PagedImageTableData.h
include/gw2formats/pf/chunks/anic/: PackAnimSequences.h
include/gw2formats/pf/chunks/cmaC/: CollideModelManifest.h
include/gw2formats/pf/chunks/cmpc/: PackComposite.h
include/gw2formats/pf/chunks/cntc/: PackContent.h
include/gw2formats/pf/chunks/emoc/: PackEmoteAnimations.h
include/gw2formats/pf/chunks/eula/: PackEula.h
include/gw2formats/pf/chunks/hvkC/: PackMapCollide.h
include/gw2formats/pf/chunks/mMet/: PackMapMetadata.h
include/gw2formats/pf/chunks/mapc/: MapAudio.h  MapMission.h  MapParam.h  MapShore.h  MapSurfaces.h  MapTerrainImg.h  PackMapAreas.h  PackMapCollide.h  PackMapCubeMap.h  PackMapDecals.h  PackMapEnvironment.h  PackMapLights.h  PackMapProp.h  PackMapRivers.h  PackMapShadowExt.h  PackMapTerrain.h  PackMapWater.h  PackMapZones.h  common.h
include/gw2formats/pf/chunks/mpsd/: PackMapShadow.h
include/gw2formats/pf/chunks/prlt/: ContentPortalManifest.h
include/gw2formats/pf/chunks/txtV/: TextPackVariants.h
include/gw2formats/pf/chunks/txtm/: TextPackManifest.h
include/gw2formats/pf/chunks/txtp/: TextPackPasswords.h
include/gw2formats/pf/chunks/txtv_/: TextPackVoices.h
include/gw2formats/pf/helpers/: Array.h  FileName.h  FileReference.h  Ptr.h  RefList.h  String.h  StringBase.h  Vector.h  WString.h  read.h
prj/: Bxml2Test.vcxproj  EnumStrings.vcxproj  EnumStrings.vcxproj.filters  EulaSample.vcxproj  EulaSample.vcxproj.filters  Gw2Formats.sln  Gw2Formats.vcxproj  Gw2Formats.vcxproj.filters  TextureDump.vcxproj  TextureDump.vcxproj.filters  gw2formats.cbp  gw2formats.workspace
samples/enumerate-strings/: main.cpp
samples/eula/: main.cpp
samples/texture-dump/: main.cpp
src/: StringsFile.cpp  TextureFile.cpp
src/bxml2/: Bxml2Reader.cpp  XmlAttribute.cpp  XmlDocument.cpp  XmlElement.cpp  XmlWriter.cpp
src/exception/: Exception.cpp
src/pf/chunks/ABIX/: BankIndexData.cpp
src/pf/chunks/ABNK/: BankFileData.cpp
src/pf/chunks/AMAT/: AmatDx9Material.cpp  AmatGfxMaterial.cpp  AmatGr.cpp  AmatToolParams.cpp
src/pf/chunks/AMSP/: ScriptFileData.cpp
src/pf/chunks/ASND/: WaveformData.cpp
src/pf/chunks/CINP/: SceneData.cpp
src/pf/chunks/MODL/: ModelFileAnimation.cpp  ModelFileCollision.cpp  ModelFileData.cpp  ModelFileGeometry.cpp  ModelFileProperties.cpp  ModelFileRootMotion.cpp  ModelFileSkeleton.cpp  common.cpp
src/pf/chunks/PIMG/: PagedImageTableData.cpp
src/pf/chunks/anic/: PackAnimSequences.cpp
src/pf/chunks/cmaC/: CollideModelManifest.cpp
src/pf/chunks/cmpc/: PackComposite.cpp
src/pf/chunks/cntc/: PackContent.cpp
src/pf/chunks/emoc/: PackEmoteAnimations.cpp
src/pf/chunks/eula/: PackEula.cpp
src/pf/chunks/hvkC/: PackMapCollide.cpp
src/pf/chunks/mMet/: PackMapMetadata.cpp
src/pf/chunks/mapc/: MapAudio.cpp  MapMission.cpp  MapParam.cpp  MapShore.cpp  MapSurfaces.cpp  MapTerrainImg.cpp  PackMapAreas.cpp  PackMapCubeMap.cpp  PackMapDecals.cpp  PackMapEnvironment.cpp  PackMapLights.cpp  PackMapProp.cpp  PackMapRivers.cpp  PackMapShadowExt.cpp  PackMapTerrain.cpp  PackMapWater.cpp  PackMapZones.cpp  common.cpp
src/pf/chunks/mpsd/: PackMapShadow.cpp
src/pf/chunks/prlt/: ContentPortalManifest.cpp
src/pf/chunks/txtV/: TextPackVariants.cpp
src/pf/chunks/txtm/: TextPackManifest.cpp
src/pf/chunks/txtp/: TextPackPasswords.cpp
src/pf/chunks/txtv_/: TextPackVoices.cpp
src/pf/helpers/: FileName.cpp  FileReference.cpp
